<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="401dp"
        android:layout_height="572dp"
        android:clickable="true"
        android:contextClickable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        tools:ignore="TextSizeCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/truck1" />


            <TextView
                android:id="@+id/vehicleNo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/vehicle_no"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vehicleNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:text="@string/car_1234"
                android:textColor="#615F5F"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/vehicleType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/_2_axl_lorry"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_company_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/company"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vehicleOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:text="@string/abc_company"
                android:textColor="#615F5F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_price_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/price_per_1_km"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vehiclePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:text="@string/rs_1000"
                android:textColor="#615F5F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vehicleDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:text="@string/this_lorry_can_handle_max_weight_of_5000kg"
                android:textColor="#615F5F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_contact_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/contact"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vehicleContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:text="0771234567"
                android:textColor="#615F5F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_location_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vehicleLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:text="@string/colombo"
                android:textColor="#615F5F"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>