<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E3E3"
    tools:context=".activites.MainActivityVehcileProfile">

    <TextView
        android:id="@+id/vehicleid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="-NUk8AwZhHKPmsTXl-7c"
        android:textColor="#615F5F"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="400dp"
        android:layout_height="574dp"
        android:layout_marginTop="9dp"
        android:clickable="true"
        android:contextClickable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicleid"
        tools:ignore="TextSizeCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/truck1" />


            <TextView
                android:id="@+id/vehicleNo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/vehicle_no"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vehicleNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:text="@string/car_1234"
                android:textColor="#615F5F"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/vehicle_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/_2_axl_lorry"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_company_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/company"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:text="@string/abc_company"
                android:textColor="#615F5F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_price_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/price_per_1_km"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:text="@string/rs_1000"
                android:textColor="#615F5F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:text="@string/this_lorry_can_handle_max_weight_of_5000kg"
                android:textColor="#615F5F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_contact_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/contact"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:text="0771234567"
                android:textColor="#615F5F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_location_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:text="@string/colombo"
                android:textColor="#615F5F"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdateProfile"
        android:layout_width="355dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#FF9800"
        android:text="Update Details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteAccount"
        android:layout_width="355dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#F44336"
        android:text="Delete Details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateProfile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBacktoprofile"
        android:layout_width="355dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/green"
        android:text="Back to Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>